partail completion of fixed appointment and set appointment.. Validation Required

--- a/AppointmentFixturesProject/AppointmentFixturesProject.csproj
+++ b/AppointmentFixturesProject/AppointmentFixturesProject.csproj
@@ -20,6 +20,7 @@
     <IISExpressAnonymousAuthentication />
     <IISExpressWindowsAuthentication />
     <IISExpressUseClassicPipelineMode />
+    <UseGlobalApplicationHostFile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <DebugSymbols>true</DebugSymbols>
@@ -260,6 +261,7 @@
     <Content Include="Others\js\plugins.js" />
     <Content Include="Others\js\popper.min.js" />
     <Content Include="Others\style.css" />
+    <Content Include="Scripts\AppointmentSetOrCancel.js" />
     <Content Include="Scripts\bootstrap.js" />
     <Content Include="Scripts\bootstrap.min.js" />
     <Content Include="Others\fonts\fontawesome-webfont.eot" />
@@ -268,16 +270,20 @@
     <Content Include="Others\fonts\fontawesome-webfont.woff2" />
     <Content Include="Others\fonts\FontAwesome.otf" />
     <None Include="Scripts\jquery-1.10.2.intellisense.js" />
+    <Content Include="Scripts\employee.js" />
     <Content Include="Scripts\jquery-1.10.2.js" />
     <Content Include="Scripts\jquery-1.10.2.min.js" />
     <None Include="Scripts\jquery.validate-vsdoc.js" />
+    <Content Include="Scripts\jquery.unobtrusive-ajax.min.js" />
     <Content Include="Scripts\jquery.validate.js" />
     <Content Include="Scripts\jquery.validate.min.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.js" />
     <Content Include="Scripts\jquery.validate.unobtrusive.min.js" />
     <Content Include="Scripts\modernizr-2.6.2.js" />
+    <Content Include="Scripts\moment.js" />
     <Content Include="Scripts\respond.js" />
     <Content Include="Scripts\respond.min.js" />
+    <Content Include="Scripts\UserScript\UserViewScript.js" />
     <Content Include="Scripts\_references.js" />
     <Content Include="Web.config" />
     <Content Include="Web.Debug.config">
@@ -324,7 +330,6 @@
     <Content Include="Views\Shared\_VIPSharedView.cshtml" />
     <Content Include="Views\VIP\Index.cshtml" />
     <Content Include="Views\VIP\FixAppointment.cshtml" />
-    <Content Include="Views\VIP\ViewAppointment.cshtml" />
     <Content Include="Views\VIP\EditAppointmentTiming.cshtml" />
     <Content Include="Views\VIP\DeleteAppointmentTiming.cshtml" />
     <Content Include="Views\Account\RegisterVIP.cshtml" />
@@ -344,6 +349,14 @@
     <Content Include="Views\Company\DetailsDepartment.cshtml" />
     <Content Include="Views\Company\ScheduleVip.cshtml" />
     <Content Include="Views\Company\DetailsVIP.cshtml" />
+    <Content Include="Views\User\FixAppointment.cshtml" />
+    <Content Include="Views\VIP\ViewAppointment.cshtml" />
+    <Content Include="Views\VIP\AppointmentCanceledOrNot.cshtml" />
+    <Content Include="Views\VIP\AppointmentCancelorNot.cshtml" />
+    <Content Include="Views\VIP\UpdatingAppointment.cshtml" />
+    <Content Include="Views\User\ViewSetAppointmentDetails.cshtml" />
+    <Content Include="Views\Company\FixAppointment.cshtml" />
+    <Content Include="Views\Company\EditAppointment.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
